changed column type to varchar

--- a/elimu_yangu/careerguide/templates/school.html
+++ b/elimu_yangu/careerguide/templates/school.html
@@ -137,6 +137,8 @@
           var subjectPos = $(this).attr('data-position');
           var subjectsPerformance = {{ OlevelSchooldetailsList | safe }};
           var subject = subjectsPerformance[subjectPos];
+          console.log(subject);
+          console.log(subjectPos);
           var countA = 0;
           var countB = 0;
           var countC = 0;
