--- a/wajibisha/templates/_base.html
+++ b/wajibisha/templates/_base.html
@@ -4,7 +4,7 @@
 
 {% block head_css %}
     {{ block.super }}
-{#    <link rel="stylesheet" href="{% sass_src 'css/pesayetu.scss' %}">#}
+    <link rel="stylesheet" href="{% sass_src 'css/wajibisha.scss' %}">
 {% endblock %}
 
 
