--- a/wajibisha/static/css/wajibisha.scss
+++ b/wajibisha/static/css/wajibisha.scss
@@ -13,7 +13,7 @@ body {
 }
 
 @media only screen and (min-width: 1140px) {
-  .wrapper {
+  #page-header .wrapper {
     width: 95%;
     margin: 0 auto;
   }
