--- a/wajibisha/templates/_footer.html
+++ b/wajibisha/templates/_footer.html
@@ -1,6 +1,38 @@
 {% extends '_footer.html' %}
 
 {% load staticfiles %}
+
+{% block footer_projects %}
+  <p>Other africaSPENDING Tools:</p>
+  <ul class="smaller">
+    <li>
+      <a href="https://biscuitindex.codeforkenya.org" target="_blank">Biscuit
+        Index</a>
+
+    </li>
+    <li><a href="https://taxclock.codeforkenya.org" target="_blank">TaxClock
+      Kenya</a></li>
+    <li><a href="https://pesacheck.org" target="_blank">PesaCheck</a></li>
+  </ul>
+  <br/>
+  <p>Join Our Community:</p>
+  <ul class="smaller">
+    <li>
+      <a href="https://facebook.com/HacksHackersAfrica" target="_blank">Hacks/Hackers
+        Africa</a>
+    </li>
+  </ul>
+
+{% endblock %}
 {% block footer_branding %}
+  <a href="https://codeforafrica.org" target="_blank">
+    <img src="{% static 'img/logos/cfafrica-white.png' %}"
+         alt="Code for Africa" style="margin-top: 0;"></a>
+  <a href="https://icfj.org" target="_blank">
+    <img src="{% static 'img/logos/icfj-white.png' %}" alt="ICFJ"
+         style="max-height: 42px;"></a>
+  <a href="https://www.thomsonreuters.com/en.html"><img src="{% static 'img/logos/Thomson-Reuters.svg' %}"
+          alt="Thomson Reuters"
+          style="max-height: 42px;"></a>
 
 {% endblock %}
