--- a/wajibisha/static/css/wajibisha.css
+++ b/wajibisha/static/css/wajibisha.css
@@ -1,27 +1,16 @@
-$color-blue: #0067a3;
-$color-red: #ee4538;
-$color-orange: #f7971d;
-$color-yellow: #f8ca0f;
-$color-green: #4cae4e;
-
 body {
-  background-color: #F6F9FC !important;
-}
+  background-color: #F6F9FC !important; }
 
 #page-header {
-  background-color: $color-blue;
-}
+  background-color: #0067a3; }
 
 @media only screen and (min-width: 1140px) {
   #page-header .wrapper {
     width: 95%;
-    margin: 0 auto;
-  }
-}
+    margin: 0 auto; } }
 
 #page-footer {
-  background-color: $color-blue;
-}
+  background-color: #0067a3; }
 
 .mission {
   background-color: white;
@@ -29,24 +18,20 @@ body {
   height: auto;
   display: table;
   float: none;
-  width: 100%;
-
-  .objective {
+  width: 100%; }
+  .mission .objective {
     height: inherit;
     display: table-cell;
     float: none;
     vertical-align: middle;
     text-align: center;
-    padding: 0 30px;
-  }
-  .pie-chart {
+    padding: 0 30px; }
+  .mission .pie-chart {
     display: table-cell;
     float: none;
     vertical-align: middle;
-    text-align: center;
-
-  }
-  .title {
+    text-align: center; }
+  .mission .title {
     color: #B7E4FF;
     font-size: large;
     border-right: solid #d4d4d4;
@@ -55,15 +40,12 @@ body {
     float: none;
     vertical-align: middle;
     text-align: center;
-    padding: 30px 0;
-
-  }
-}
+    padding: 30px 0; }
 
 .clipped-header {
   /*-webkit-clip-path: polygon(0 0, 100% 0, 100% 46%, 0% 100%);
   clip-path: polygon(0 0, 100% 0, 100% 46%, 0% 100%);*/
-  background-color: $color-blue;
+  background-color: #0067a3;
   height: 250px;
   color: white;
   text-align: center;
@@ -72,9 +54,8 @@ body {
   z-index: 100;
   transform-origin: -40px;
   transform: skewY(-6deg);
-  box-shadow: 0 4px 2px -2px gray;
-
-  .wrapper {
+  box-shadow: 0 4px 2px -2px gray; }
+  .clipped-header .wrapper {
     position: absolute;
     left: 0;
     right: 0;
@@ -82,33 +63,26 @@ body {
     bottom: 0;
     z-index: 103;
     transform: skewY(6deg);
-    transform-origin: 0;
-  }
-
-  .wrapper .presentation-img {
+    transform-origin: 0; }
+  .clipped-header .wrapper .presentation-img {
     z-index: 1003;
     height: 200px;
     position: absolute;
-    right: 0;
-  }
-
-}
+    right: 0; }
 
 .yellow-text {
-  color: $color-yellow;
-}
+  color: #f8ca0f; }
 
 .how-it-works img {
-  max-width: 100px;
-}
+  max-width: 100px; }
 
 .how-it-works p {
-  margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
 .card {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  padding: 50px 20px;
-}
+  padding: 50px 20px; }
+
+/*# sourceMappingURL=../../../../../../../../static/css/wajibisha.css.map */
