--- a/elimu_yangu/templates/footer.html
+++ b/elimu_yangu/templates/footer.html
@@ -1,4 +1,4 @@
-{% extends '_footer.html' %}
+<!-- {% extends '_footer.html' %}
 {% load staticfiles %}
 
 {% block footer_branding %}
@@ -6,4 +6,27 @@
         <img src="{% static 'img/logos/cftanzania-white.png' %}" alt="Code for Africa" style="margin-top: 20px; max-width: 105px;"></a>
     <a href="https://worldbank.org/" target="_blank">
         <img src="{% static 'img/logos/world_bank_group_vertial_white_logo.png' %}" alt="World Bank Group" style="max-width: 105px; max-height: 50px;"></a>
-{% endblock %}
+{% endblock %} -->
+
+{% load staticfiles %}
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6 margin-top">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
+        </div>
+        <div class="col-sm-6 text-center margin-top footer-link">
+            <div class="col-xs-6">
+                <div>RESOURCES</div>
+                <ul class="list-group">
+                    <li class="list-group-item"> <a href="#">Link 1</a></li>
+                    <li class="list-group-item"> <a href="#">Link 2</a></li>
+                    <li class="list-group-item"> <a href="#">Link 3</a></li>
+                    <li class="list-group-item"> <a href="#">Link 4</a></li>
+                </ul>
+            </div>
+            <div class="col-xs-6">
+                <img class="img-fluid img-thumbnail" src="images/cfafrica-white.png" />
+            </div>
+        </div>
+    </div>
+</div>
