--- a/elimu_yangu/universityfinder/templates/index.html
+++ b/elimu_yangu/universityfinder/templates/index.html
@@ -1,6 +1,6 @@
 <!-- index.html-->
 
-{% extends "_base.html" %}
+{% extends "universityfinderbase.html" %}
 {% block title %}Home{% endblock %}
 {% block body %}
   <main role="main" class="container">
