--- a/elimu_yangu/templates/homepage.html
+++ b/elimu_yangu/templates/homepage.html
@@ -1,57 +1,128 @@
 {% extends 'homepage_country.html' %}{% load humanize partition staticfiles %}
 
-{% block head_title %}League Table : Schools Ranking{% endblock %}
+{% block head_title %}Elimu Yangu{% endblock %}
 
 {% block header %}
-    <style>
-        #page-footer, #page-header {
-            background: #204d8a;
-        }
-    </style>
-    <header id="page-header">
-        <div id="page-header-title" class="wrapper clearfix">
-            <i id="menu-toggle" class="fa fa-bars"></i>
-            <a class="title" href="{% url 'homepage' %}">
-                <img src="{% static 'img/logos/books.png' %}" style="height: 44px; float: left;"/>
-                <span style="font-size: 25px;font-weight: bolder; margin-left:10px; line-height: 50px;">Elimu Yangu</span><br />
-            </a>
-
-            <div class="nav-menu">
-                <ul id="site-menu">
-                    {% block header_menu %}
-                        <li><a href="/leaguetable">League League</a></li>
-                        <li><a href="/careerguide">Career Guide</a></li>
-                        <li><a href="/schools">University Finder</a></li>
-                        <li><a href="/about">About</a></li>
-                    {% endblock header_menu %}
-                </ul>
-
-                {% if not hide_nav_tools %}
-                    {% block nav_tools %}
-                    <div id="menu" class="tool-set clearfix">
-                        <div class="tool-group">
-                            <input name="geography_select" id="geography-select" type="text" placeholder="Search Place" autocomplete="off">
-                        </div>
-                        {% if not hide_nav_compare %}
-                        {% comment %}
-                        <span class="separator">or</span>
-                        <div class="tool-group">
-                            <a class="button" href="{% url 'table_search' %}">
-                                <i class="fa fa-chevron-circle-right"></i>
-                                Search for data
-                            </a>
-                        </div>
-                        {% endcomment %}
-                        {% endif %}
+    <header  id="page-header">
+            <nav class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="">
+                            <img class="logo" src="{% static 'img/logo0.png' %}" />
+                        </a>
                     </div>
-                    {% endblock %}
-                {% endif %}
-            </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav text-center">
+                            <li><a href="SchoolLeague.htm">SCHOOL LEAGUE</a></li>
+                            <li><a href="CareerGuide.htm">CAREER GUIDE</a></li>
+                            <li><a href="UniFinder.htm">UNI FINDER</a></li>
+                            <li><a href="#">ABOUT</a></li>
+                            <li><a href="#">CONTACT US</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
     </header>
 {% endblock %}
 
 {% block content_container %}
+<div class="main-content">
+      <!--
+  * =================================
+  * Main content
+  * =================================
+  -->
+  <div class="landing-main text-center">
+    <h1 class="tagline">TAGLINE FOR THE PRODUCT COMES HERE</h1>
+    <h4 class="more-info">Additional Info About Product Maker Can Come Here</h4>
+
+  <!--    <button id="getStarted">GET STARTED</button>-->
+  </div>
+  <!--
+  * =================================
+  * Help content
+  * =================================
+  -->
+  <div class="help-box text-center">
+  <div class="container">
+      <div class="row">
+  <!--            <div class="help-text with-padding">HOW CAN WE HELP YOU?</div>-->
+          <div class="help-info">
+              <span>I am a</span>
+              <select id="person" class="inline-select">
+                  <option value="journalist" selected="selected">journalist</option>
+                  <option value="student">student</option>
+              </select>
+              <span>looking for</span>
+              <select id="wishlist" class="inline-select">
+                  <option value="suitable university courses to attend">suitable university courses to attend</option>
+                  <option value="data on high schools" selected="selected">data on high schools</option>
+                  <option value="best high schools to go to">best high schools to go to</option>
+              </select>
+              <span>in the country</span>
+          </div>
+      </div>
+      <div class="row">
+          <a id="schoolLeague" class="col-sm-3 option-box selected" href="SchoolLeague.htm">
+              <h3 class="title">SCHOOL LEAGUE</h3>
+              <div class="description">Explore the complete list of schools in Tanzania and compare performances within the different regions.</div>
+          </a>
+          <a id="careerGuide" class="col-sm-3 option-box" href="CareerGuide.htm">
+              <h3 class="title">CAREER GUIDE</h3>
+              <div class="description">Find schools for you to go in your locate that align best with your career choice.</div>
+          </a>
+          <a id="universityFinder" class="col-sm-3 option-box" href="UniFinder.htm">
+              <h3 class="title">UNIVERSITY FINDER</h3>
+              <div class="description">Find the best possible university course to attend based on your performance and preferences.</div>
+          </a>
+      </div>
+  </div>
+  </div>
+  <!--
+  * =================================
+  * Testimonial
+  * =================================
+  -->
+  <section id="testimonial" class="testimonial-area">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+              <h2 class="title text-center">WHAT THEY SAY ABOUT US</h2>
+              <div class="testimonial-list">
+                  <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
+                  <div class="single-testimonial text-center">
+                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s Lorem Ipsum.</p>
+                      <h2>John Doe</h2>
+                      <h3>On Career Guide</h3>
+                  </div>
+                  <!-- / END SINGLE TESTIMONIAL DESIGN AREA -->
+                  <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
+                  <div class="single-testimonial text-center">
+                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s Lorem Ipsum.</p>
+                      <h2>Jessica malcova</h2>
+                      <h3>CEO facebook</h3>
+                  </div>
+                  <!-- / END SINGLE TESTIMONIAL DESIGN AREA -->
+                  <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
+                  <div class="single-testimonial text-center">
+                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s Lorem Ipsum.</p>
+                      <h2>Jessica malcova</h2>
+                      <h3>CEO facebook</h3>
+                  </div>
+                  <!-- / END SINGLE TESTIMONIAL DESIGN AREA -->
+              </div>
+          </div>
+      </div>
+  </div>
+  </section>
+</div>
     <div class="showcase clearfix partners {{ extra_css_class }}">
         <div class="wrapper text-center">
             <h2>Partners</h2>
