--- a/elimu_yangu/templates/homepage.html
+++ b/elimu_yangu/templates/homepage.html
@@ -19,11 +19,11 @@
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav text-center">
-                            <li><a href="SchoolLeague.htm">SCHOOL LEAGUE</a></li>
-                            <li><a href="CareerGuide.htm">CAREER GUIDE</a></li>
-                            <li><a href="UniFinder.htm">UNI FINDER</a></li>
-                            <li><a href="#">ABOUT</a></li>
-                            <li><a href="#">CONTACT US</a></li>
+                            <li><a href="/leaguetable">SCHOOL LEAGUE</a></li>
+                            <li><a href="/careerguide">CAREER GUIDE</a></li>
+                            <li><a href="/university-finder">UNI FINDER</a></li>
+                            <li><a href="/about">ABOUT</a></li>
+                            <li><a href="/contact">CONTACT US</a></li>
                         </ul>
                     </div>
                 </div>
@@ -70,15 +70,15 @@
           </div>
       </div>
       <div class="row">
-          <a id="schoolLeague" class="col-sm-3 option-box selected" href="SchoolLeague.htm">
+          <a id="schoolLeague" class="col-sm-3 option-box selected" href="/leaguetable">
               <h3 class="title">SCHOOL LEAGUE</h3>
               <div class="description">Explore the complete list of schools in Tanzania and compare performances within the different regions.</div>
           </a>
-          <a id="careerGuide" class="col-sm-3 option-box" href="CareerGuide.htm">
+          <a id="careerGuide" class="col-sm-3 option-box" href="/careerguide">
               <h3 class="title">CAREER GUIDE</h3>
               <div class="description">Find schools for you to go in your locate that align best with your career choice.</div>
           </a>
-          <a id="universityFinder" class="col-sm-3 option-box" href="UniFinder.htm">
+          <a id="universityFinder" class="col-sm-3 option-box" href="/university_finder">
               <h3 class="title">UNIVERSITY FINDER</h3>
               <div class="description">Find the best possible university course to attend based on your performance and preferences.</div>
           </a>
