--- a/elimu_yangu/templates/footer.html
+++ b/elimu_yangu/templates/footer.html
@@ -1,4 +1,4 @@
-<!-- {% extends '_footer.html' %}
+<!--
 {% load staticfiles %}
 
 {% block footer_branding %}
@@ -25,7 +25,7 @@
                 </ul>
             </div>
             <div class="col-xs-6">
-                <img class="img-fluid img-thumbnail" src="images/cfafrica-white.png" />
+                <img class="img-fluid img-thumbnail" src="{% static 'img/cfafrica-white.png' %}" />
             </div>
         </div>
     </div>
