--- a/elimu_yangu/templates/homepage_country.html
+++ b/elimu_yangu/templates/homepage_country.html
@@ -20,6 +20,45 @@
 <link href="{% static 'css/vendor/leaflet.label.css' %}" rel="stylesheet" />
 {% endblock %}
 
+{% block header %}
+<style>
+    #page-footer {
+        background: #2E4668;
+        padding: 10px 30px 30px;
+    }
+    #page-footer img {
+      max-height: 100%;
+      margin: 0;
+    }
+</style>
+    <header  id="page-header">
+            <nav class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="">
+                            <img class="logo" src="{% static 'img/logo0.png' %}" />
+                        </a>
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav text-center">
+                            <li><a href="/leaguetable">SCHOOL LEAGUE</a></li>
+                            <li><a href="/careerguide">CAREER GUIDE</a></li>
+                            <li><a href="/university-finder">UNI FINDER</a></li>
+                            <li><a href="/about">ABOUT</a></li>
+                            <li><a href="/contact">CONTACT US</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+    </header>
+{% endblock %}
+
 {% block body_javascript_extra %}
     {{ block.super }}
 
@@ -28,7 +67,7 @@
     <script src="{% static 'lib/bootstrap/dist/js/bootstrap.js' %}"></script>
     <script src="{% static 'lib/owlcarousel/js/owl.carousel.min.js' %}"></script>
     <script src="{% static 'lib/jquery.nice-select/js/jquery.nice-select.min.js' %}"></script>
-    <script src="{% static 'js/site.js?v=niNnC0sBeSbne3UFFGLvV7JYQcxtY1M0RsGNx1k7OJo' %}"></script>
+    <script src="{% static 'js/site.js' %}"></script>
 
     <script src="{% static 'js/vendor/leaflet-0.6.4.js' %}"></script>
     <script src="{% static 'js/vendor/topojson.v1.min.js' %}"></script>
