--- a/elimu_yangu/careerguide/templates/careerguide/school.html
+++ b/elimu_yangu/careerguide/templates/careerguide/school.html
@@ -1,13 +1,79 @@
-{% extends "careerguidebase.html" %}
-{% block title %} {{ pageTitle }}{% endblock %}
-{% block body %}
-  <main role="main">
-    <section class="starter-template">
-        <h1>{{ school_name }}</h1>
-        <h2> Region: {{ school_region }} </h2>
-    </section>
-    <section class="container">
+<!-- index.html-->
+{% extends 'homepage_country.html' %}{% load humanize partition staticfiles %}
+
+{% block head_title %}School Page: Career Guide{% endblock %}
+
+{% block content_container %}
+<div class="main-content">
+  <div class="map-box">
+    <div class="container">
+        <div class="row">
+            <h3 class="map-title">School Name: {{ school_name }}</h3>
+            <h5 class="map-description">Region: {{ school_region }}</h5>
+        </div>
+    </div>
+  </div>
+  <div class="container">
       <div class="row">
+          <div class="chart-box col-xs-12">
+              <div class="col-xs-12 chart-header">
+                  <div class="col-sm-6">
+                      <div class="col-xs-12">
+                          <h4>Overall Performance</h4>
+                      </div>
+                  </div>
+                  <div class="col-sm-6">
+                      <div class="col-xs-5">
+                          <div class="school-name">School Name</div>
+                          <div class="school-type">Mixed</div>
+                      </div>
+                      <div class="col-xs-5">
+                          <div class="school-rank">#1 in Tanzania</div>
+                          <div class="school-rank">#1 in Morogoro</div>
+                      </div>
+                      <div class="col-xs-2">
+                          {{ school_gpa }} GPA
+                      </div>
+                  </div>
+              </div>
+              <div class="col-xs-12 chart">
+              </div>
+              <div class="col-xs-12">
+                <div class="col-sm-12">
+                <span class="details-info">Click on A Subject In The Bar Chart To View More Details</span>
+              </div>
+              <div class="col-sm-6">
+                  <h3 class="no-margin">Subject Perfomance</h3>
+                  <br />
+                  <ul class="list-group">
+                  {% for subject in OlevelSchooldetailsList %}
+                    <li class="list-group-item" id="subject{{ forloop.counter0 }}" data-position={{ forloop.counter0 }}>{{ subject.subjectname }}
+                    <div id="bar{{ forloop.counter }}" class="barfiller">
+                      <div class="tipWrap">
+                  		<span class="tip"></span>
+                  	    </div>
+                      <span class="fill" data-percentage={{ subject.subjectgpa }}></span>
+                    </div>
+                    </li>
+                  {% endfor %}
+                  </ul>
+                </div>
+                <div class="col-sm-6 details">
+                    <div class ="col-sm-12">
+                      <div id="subjectPerformance" class = "subjectPerformance">
+                        <h3 class="no-margin" id="subjectPerformanceHead" style="transform: capitalize"> </h3>
+                        <div id="subjectChartContainer" style="width: 100%; height: 300px"></div>
+                      </div>
+                    </div>
+                    <br />
+                    <br />
+                    <div class="col-sm-12">
+                      <h3 class="no-margin" id="genderPerformanceHead"> </h3>
+                      <div id="genderSubjectPerformance" style="width: 100%; height: 350px"></div>
+                    </div>
+                </div>
+          </div>
+        </div>
         <div class="col-md-12">
           <div style="padding: 5 30px">
             {% if OlevelSchooldetailsList %}
@@ -30,7 +96,7 @@
                 </div>
               </div>
               <hr />
-              <div class="row">
+              <!-- <div class="row">
                 <div class="col-lg-8 col-md-8 col-xs-12">
                   <p class="text-center">Subjects GPA</p>
                   <ul class="list-group">
@@ -49,17 +115,17 @@
                 <div class="col-lg-4 col-md-4 col-xs-12">
                   <div class ="col-md-12">
                     <div id="subjectPerformance" class = "subjectPerformance">
-                      <!-- <p class="text-center">Subject Performance</p> -->
+                       <p class="text-center">Subject Performance</p>
                       <div id="subjectChartContainer" style="width: 100%; height: 300px"></div>
                     </div>
                   </div>
                   <br />
                   <div class="col-md-12">
-                    <!-- <p class="text-center">Gender Performance</p> -->
+                    <p class="text-center">Gender Performance</p>
                     <div id="genderSubjectPerformance" style="width: 100%; height: 350px"></div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </section>
             <section class="tabSection container" id="content2">
               <div class="row">
@@ -113,9 +179,8 @@
             </section>
           </div>
         </div>
-      </div>
-    <section>
-  </main>
+    </div>
+  </div>
   <script type="text/javascript">
   $(document).ready(function(){
     var count = {{ OlevelSchooldetailsList|length }}
@@ -163,11 +228,10 @@
             }
           }
           var perc = (100/len).toFixed(2);
-          var texts = subject.subjectname + " GRADE DISTRIBUTION 2017";
+          $('#subjectPerformanceHead').text(subject.subjectname.charAt(0).toUpperCase() + subject.subjectname.slice(1).toLowerCase() + ' Grade Distribution 2017')
 
           $("#subjectChartContainer").CanvasJSChart({
             title: {
-              text: texts,
               fontSize: 18
             },
             axisY: {
@@ -244,10 +308,10 @@
         }
         var percM = (100/lenM).toFixed(2);
 
-        var genderHead =  subject.subjectname + " GENDER PERFORMANCE"
+        var genderHead = subject.subjectname.charAt(0).toUpperCase() + subject.subjectname.slice(1).toLowerCase() + " Gender Performance "
+        $('#genderPerformanceHead').text(genderHead)
         $("#genderSubjectPerformance").CanvasJSChart ({
         	title:{
-        		text: genderHead,
             fontSize: 18
         	},
         	axisY: {
@@ -519,29 +583,29 @@
       var totalAl = div1 + div2 + div3 + div4 + div0;
       var percent = (100/totalAl).toFixed(2)
       $("#chartContainer").CanvasJSChart({
-      title: {
-        text: "Overall School Performance 2017",
-        fontSize: 18
-      },
-      axisY: {
-        title: "Products in %"
-      },
-      data: [
-      {
-        type: "pie",
-        showInLegend: true,
-        toolTipContent: "{label} <br/> {y} %",
-        indexLabel: "{label}: {y} %",
-        dataPoints: [
-          { label: "Division I",  y: div1 * percent, legendText: "Division I"},
-          { label: "Division II", y: div2* percent, legendText: "Division II"  },
-          { label: "Division III",y: div3 * percent,  legendText: "Division III" },
-          { label: "Division IV", y: div4 * percent,  legendText: "Division IV"},
-          { label: "Division 0",  y: div0 * percent,  legendText: "Division 0" },
+        title: {
+          text: "Overall School Performance 2017",
+          fontSize: 18
+        },
+        axisY: {
+          title: "Products in %"
+        },
+        data: [
+        {
+          type: "pie",
+          showInLegend: true,
+          toolTipContent: "{label} <br/> {y} %",
+          indexLabel: "{label}: {y} %",
+          dataPoints: [
+            { label: "Division I",  y: div1 * percent, legendText: "Division I"},
+            { label: "Division II", y: div2* percent, legendText: "Division II"  },
+            { label: "Division III",y: div3 * percent,  legendText: "Division III" },
+            { label: "Division IV", y: div4 * percent,  legendText: "Division IV"},
+            { label: "Division 0",  y: div0 * percent,  legendText: "Division 0" },
+          ]
+        }
         ]
-      }
-      ]
-    });
+      });
     }
 
     $('#tab3').click(function(){
@@ -607,3 +671,6 @@
   });
   </script>
 {% endblock %}
+{% block footer_content %}
+    {% include 'footer.html' %}
+{% endblock footer_content %}
