--- a/elimu_yangu/leaguetable/templates/leaguetable/profile/profile_detail.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/profile/profile_detail.html
@@ -65,156 +65,23 @@
             <div class="col-md-6">
                 <h3 class="title">10 Top Schools</h3>
                 <ul class="list-group school">
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Mixed</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#1 in Tanzania</div>
-                                <div class="school-rank">#1 in Morogoro</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Boys</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#2 in Tanzania</div>
-                                <div class="school-rank">#2 in Morogoro</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Girls</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#3 in Tanzania</div>
-                                <div class="school-rank">#3 in Morogoro</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Mixed</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#4 in Tanzania</div>
-                                <div class="school-rank">#1 in Morogoro</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Mixed</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#5 in Tanzania</div>
-                                <div class="school-rank">#1 in Mara</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Boys</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#6 in Tanzania</div>
-                                <div class="school-rank">#1 in Katavi</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Mixed</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#7 in Tanzania</div>
-                                <div class="school-rank">#2 in Mara</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Mixed</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#8 in Tanzania</div>
-                                <div class="school-rank">#1 in Kigoma</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">Very Long School Name</div>
-                                <div class="school-type">Girls</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#9 in Tanzania</div>
-                                <div class="school-rank">#1 in Dodoma</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Mixed</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#10 in Tanzania</div>
-                                <div class="school-rank">#2 in Katavi</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
+                  {% for school in schools.best_schools|slice:":10" %}
+                  <li class="list-group-item">
+                      <a href="leaguetable/schools/{{ school.code }}">
+                          <div class="col-xs-5">
+                              <div class="school-name">{{ school.name|slice:":-16" }} SCHOOL</div>
+                              <div class="school-type">Mixed</div>
+                          </div>
+                          <div class="col-xs-5">
+                              <div class="school-rank">#{{ school.national_rank_all }} in Tanzania</div>
+                              <div class="school-rank">#{{ school.regional_rank_all }} in {{ school.region }}</div>
+                          </div>
+                          <div class="col-xs-2">
+                              {{ school.pass_rate }}
+                          </div>
+                      </a>
+                  </li>
+                    {% endfor %}
                 </ul>
             </div>
             <!--
@@ -225,156 +92,23 @@
             <div class="col-md-6">
                 <h3 class="title">10 Lowest Schools</h3>
                 <ul class="list-group school">
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Mixed</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#1 in Tanzania</div>
-                                <div class="school-rank">#1 in Morogoro</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Boys</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#2 in Tanzania</div>
-                                <div class="school-rank">#2 in Morogoro</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Girls</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#3 in Tanzania</div>
-                                <div class="school-rank">#3 in Morogoro</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Mixed</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#4 in Tanzania</div>
-                                <div class="school-rank">#1 in Morogoro</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Mixed</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#5 in Tanzania</div>
-                                <div class="school-rank">#1 in Mara</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Boys</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#6 in Tanzania</div>
-                                <div class="school-rank">#1 in Katavi</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Mixed</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#7 in Tanzania</div>
-                                <div class="school-rank">#2 in Mara</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Mixed</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#8 in Tanzania</div>
-                                <div class="school-rank">#1 in Kigoma</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">Very Long School Name</div>
-                                <div class="school-type">Girls</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#9 in Tanzania</div>
-                                <div class="school-rank">#1 in Dodoma</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="SchoolLeagueSchoolPage.htm">
-                            <div class="col-xs-5">
-                                <div class="school-name">School Name</div>
-                                <div class="school-type">Mixed</div>
-                            </div>
-                            <div class="col-xs-5">
-                                <div class="school-rank">#10 in Tanzania</div>
-                                <div class="school-rank">#2 in Katavi</div>
-                            </div>
-                            <div class="col-xs-2">
-                                85% Pass
-                            </div>
-                        </a>
-                    </li>
+                  {% for school in schools.worst_schools|slice:":10" %}
+                  <li class="list-group-item">
+                      <a href="leaguetable/schools/{{ school.code }}">
+                          <div class="col-xs-5">
+                              <div class="school-name">{{ school.name|slice:":-16" }} SCHOOL</div>
+                              <div class="school-type">Mixed</div>
+                          </div>
+                          <div class="col-xs-5">
+                              <div class="school-rank">#{{ school.national_rank_all }} in Tanzania</div>
+                              <div class="school-rank">#{{ school.regional_rank_all }} in {{ school.region }}</div>
+                          </div>
+                          <div class="col-xs-2">
+                              {{ school.pass_rate }}
+                          </div>
+                      </a>
+                  </li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
