--- a/elimu_yangu/templates/homepage_country.html
+++ b/elimu_yangu/templates/homepage_country.html
@@ -7,6 +7,7 @@
 
 <link rel="stylesheet" href="{% static 'lib/bootstrap/dist/css/bootstrap.css' %}" />
 <link rel="stylesheet" href="{% static 'css/site.css' %}" />
+<link rel=stylesheet type=text/css href="{% static 'css/style.css' %}">
      <!-- UNI FINDER STEP CSS -->
 <link rel="stylesheet" href="{% static 'css/step.css' %}" />
 <link rel="stylesheet" href="{% static 'css/arrow.css' %}" />
@@ -18,6 +19,7 @@
 
 <link rel="stylesheet" href="{% static 'css/vendor/leaflet-0.6.4.css' %}" />
 <link href="{% static 'css/vendor/leaflet.label.css' %}" rel="stylesheet" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 {% endblock %}
 
 {% block header %}
@@ -74,6 +76,13 @@
     <script src="{% static 'js/vendor/leaflet.label.js' %}"></script>
     <script src="{% static 'js/maps_static.js' %}"></script>
     <script src="{% static 'js/profile_map.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="{% static 'js/vendor/jquery.min.js'  %}"></script>
+    <script src="{% static 'js/vendor/popper.min.js'  %}"></script>
+    <script src="{% static 'js/bootstrap/bootstrap.min.js'  %}"></script>
+    <script src="{% static 'js/vendor/holder.min.js'  %}"></script>
+    <script src="{% static 'js/jquery.barfiller.js' %}" type="text/javascript"></script>
+    <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
     {% endblock %}
 
     <script>
